WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254966
designMode should not affect shadow tree
https://bugs.webkit.org/show_bug.cgi?id=254966
Summary
designMode should not affect shadow tree
Ryosuke Niwa
Reported
2023-04-03 21:29:35 PDT
Even when the document is in design mode, its shadow trees shouldn't be considered as editable. There are a few test cases failing in editing/other/editable-state-and-focus-in-shadow-dom-in-designMode.tentative.html because of this.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-04-03 21:34:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12361
EWS
Comment 2
2023-04-03 22:31:23 PDT
Committed
262563@main
(155c4f42d9ef): <
https://commits.webkit.org/262563@main
> Reviewed commits have been landed. Closing PR #12361 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-03 22:32:16 PDT
<
rdar://problem/107595174
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug