designMode should not affect shadow tree https://bugs.webkit.org/show_bug.cgi?id=254966

Reviewed by Wenson Hsieh.

Even when the document is in design mode, its shadow trees shouldn't be considered as editable.

* LayoutTests/imported/w3c/web-platform-tests/editing/other/editable-state-and-focus-in-shadow-dom-in-designMode.tentative-expected.txt:
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::HTMLElement::editabilityFromContentEditableAttr):

Canonical link: https://commits.webkit.org/262563@main